Moved classes in testing package to apgas.impl.elastic
Also resolved javadoc compilation errors